hiding project arrow on mobile until fix

--- a/src/js/components/projectBody/projectBody.css
+++ b/src/js/components/projectBody/projectBody.css
@@ -65,3 +65,10 @@
   outline: 0;
   cursor: pointer;
 }
+
+@media screen and (max-width: 1024px) {
+  
+  .project-description-scroll {
+    display: none;
+  }
+}
